[REMOVE] Remove utils and move loaders to datasets

--- a/notebooks/preprocess_rat7m.ipynb
+++ b/notebooks/preprocess_rat7m.ipynb
@@ -12,7 +12,7 @@
     "%autoreload 2\n",
     "\n",
     "import propose.preprocessing.rat7m as pp\n",
-    "from propose.utils.rat7m.loaders import load_mocap, load_cameras"
+    "from propose.datasets.rat7m.loaders import load_mocap, load_cameras"
    ]
   },
   {
