[ADD] Add static loader

--- a/notebooks/demo/demo.ipynb
+++ b/notebooks/demo/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from propose.utils.rat7m.loaders import load_cameras, load_mocap\n",
+    "from propose.datasets.rat7m.loaders import load_cameras, load_mocap\n",
     "from propose.poses import Rat7mPose\n",
     "from pathlib import Path\n",
     "\n",
@@ -36,13 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "home = str(Path.home())\n",
-    "\n",
-    "mocap_path = f'{home}/data/rat7m/mocap-s4-d1.mat'\n",
-    "vid_path = f'{home}/data/rat7m/s4-d1/s4-d1-camera4-0.mp4'\n",
+    "mocap_path = f'../../data/rat7m/mocap/mocap-s4-d1.mat'\n",
+    "vid_path = f'../../data/rat7m/movies/s4-d1/s4-d1-camera4-0.mp4'\n",
     "\n",
     "vid = imageio.get_reader(vid_path)"
    ],
@@ -67,13 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[[-219.0188446 , -213.56304932, -213.24876404, ...,\n         -143.6754303 , -143.65098572, -143.54769897],\n        [-202.38188171, -198.31828308, -198.32516479, ...,\n         -153.6410675 , -153.35192871, -153.22558594]],\n\n       [[  31.07101059,   26.59701157,   25.40685844, ...,\n          180.1421814 ,  179.66021729,  180.25765991],\n        [  20.20547676,   16.88157845,   16.23282814, ...,\n          172.70890808,  172.24945068,  172.30340576]],\n\n       [[ 107.86932373,  112.40010071,  115.86945343, ...,\n           59.84708023,   59.21270752,   59.80217361],\n        [ 103.29882812,  102.8848114 ,  105.46248627, ...,\n           76.22170258,   75.75984192,   76.11906433]]])"
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
@@ -133,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
@@ -168,14 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [21:33:58<00:00, 776.39s/it]\n",
-      "100%|██████████| 100/100 [00:30<00:00,  1.97it/s]"
+      "100%|██████████| 100/100 [00:25<00:00,  4.01it/s]"
      ]
     }
    ],
@@ -230,6 +227,18 @@
     "\n",
     "ani.save('walk_cam_4_sub.mp4', writer=writer, progress_callback=lambda i, n: pbar.update(1))"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
