[REFACTOR] make data_key to be inferred

--- a/notebooks/demo/static_loader_demo.ipynb
+++ b/notebooks/demo/static_loader_demo.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -16,11 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "outputs": [],
    "source": [
-    "dirname = '/Users/paulpierzchlewicz/PycharmProjects/propose/data/rat7m' # Choose this such that it points to your dataset\n",
-    "data_key = 's4-d1'"
+    "dirname = '/Users/paulpierzchlewicz/PycharmProjects/propose/data/rat7m/s4-d1' # Choose this such that it points to your dataset"
    ],
    "metadata": {
     "collapsed": false,
@@ -31,10 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "outputs": [],
    "source": [
-    "dataloaders = static_loader(dirname, data_key, batch_size=16)"
+    "dataloaders = static_loader(dirname, batch_size=16)"
    ],
    "metadata": {
     "collapsed": false,
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
