--- a/notebooks/preprocess_rat7m.ipynb
+++ b/notebooks/preprocess_rat7m.ipynb
@@ -159,7 +159,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "pose_dir = Path(f'{dirname}/poses')\n",
+    "pose_dir = Path(f'{dirname}/{data_key}/poses')\n",
     "pose_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "pose_path = pose_dir / f'{data_key}.npy'\n",
@@ -179,13 +179,37 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "camera_dir = Path(f'{dirname}/cameras')\n",
+    "camera_dir = Path(f'{dirname}/{data_key}/cameras')\n",
     "camera_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "camera_path = camera_dir / f'{data_key}.pickle'\n",
     "\n",
     "with open(camera_path, 'wb') as f:\n",
     "    pickle.dump(cameras, f)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'rat7m'"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import PurePath\n",
+    "PurePath('/Users/paulpierzchlewicz/PycharmProjects/propose/data/rat7m').name"
    ],
    "metadata": {
     "collapsed": false,
