fix: black formatting

--- a/notebooks/demo/demo.ipynb
+++ b/notebooks/demo/demo.ipynb
@@ -30,8 +30,8 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "mocap_path = f'../../data/rat7m/mocap/mocap-s4-d1.mat'\n",
-    "vid_path = f'../../data/rat7m/movies/s4-d1/s4-d1-camera4-0.mp4'\n",
+    "mocap_path = f\"../../data/rat7m/mocap/mocap-s4-d1.mat\"\n",
+    "vid_path = f\"../../data/rat7m/movies/s4-d1/s4-d1-camera4-0.mp4\"\n",
     "\n",
     "vid = imageio.get_reader(vid_path)"
    ],
@@ -77,7 +77,7 @@
     "\n",
     "pose = pose[mask]\n",
     "\n",
-    "np.array(pose._edge('HeadF', 'HeadB'))"
+    "np.array(pose._edge(\"HeadF\", \"HeadB\"))"
    ],
    "metadata": {
     "collapsed": false,
@@ -103,9 +103,9 @@
    ],
    "source": [
     "fig = plt.figure(figsize=(10, 10))\n",
-    "ax1 = fig.add_subplot(1, 1, 1, projection='3d')\n",
+    "ax1 = fig.add_subplot(1, 1, 1, projection=\"3d\")\n",
     "ax1.get_proj = lambda: np.dot(Axes3D.get_proj(ax1), np.diag([1, 1, 0.75, 1]))\n",
-    "ax1.view_init(30,  30)\n",
+    "ax1.view_init(30, 30)\n",
     "ax1.set_xlim(-400, -100)\n",
     "ax1.set_ylim(-300, 0)\n",
     "ax1.set_zlim(0, 100)\n",
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "camera = cameras['Camera4']\n",
+    "camera = cameras[\"Camera4\"]\n",
     "pose2D = Rat7mPose(camera.proj2D(pose))\n",
     "\n",
     "frame_idx = camera.frames.squeeze()[mask][0]\n",
@@ -169,7 +169,7 @@
    ],
    "source": [
     "cameras = load_cameras(mocap_path)\n",
-    "camera = cameras['Camera4']\n",
+    "camera = cameras[\"Camera4\"]\n",
     "camera.frames = camera.frames.squeeze()[mask]\n",
     "pose_idx = 0\n",
     "\n",
@@ -183,22 +183,23 @@
     "\n",
     "fig = plt.figure(figsize=(20, 10))\n",
     "\n",
-    "ax1 = fig.add_subplot(1, 2, 1, projection='3d')\n",
+    "ax1 = fig.add_subplot(1, 2, 1, projection=\"3d\")\n",
     "ax1.get_proj = lambda: np.dot(Axes3D.get_proj(ax1), np.diag([1, 1, 0.75, 1]))\n",
-    "ax1.view_init(30,  30)\n",
+    "ax1.view_init(30, 30)\n",
     "ax1.set_xlim(-400, -100)\n",
     "ax1.set_ylim(-300, 0)\n",
     "ax1.set_zlim(0, 100)\n",
     "\n",
     "ax2 = fig.add_subplot(1, 2, 2)\n",
-    "ax2.set_title('Camera 4')\n",
-    "plt.axis('off')\n",
+    "ax2.set_title(\"Camera 4\")\n",
+    "plt.axis(\"off\")\n",
     "\n",
     "img = ax2.imshow(im)\n",
     "animate1 = pose.animate(ax1)\n",
     "animate2 = pose2D.animate(ax2)\n",
     "\n",
     "plt.close(fig)\n",
+    "\n",
     "\n",
     "def animate(i):\n",
     "    frame_idx = camera.frames.squeeze()[pose_idx + i]\n",
@@ -209,14 +210,17 @@
     "    animate1(i)\n",
     "    animate2(i)\n",
     "\n",
+    "\n",
     "ani = animation.FuncAnimation(fig, animate, frames=100)\n",
     "\n",
-    "Writer = animation.writers['ffmpeg']\n",
-    "writer = Writer(fps=30, metadata=dict(artist='Me'), bitrate=-1)\n",
+    "Writer = animation.writers[\"ffmpeg\"]\n",
+    "writer = Writer(fps=30, metadata=dict(artist=\"Me\"), bitrate=-1)\n",
     "\n",
     "pbar = tqdm(total=100, position=0)\n",
     "\n",
-    "ani.save('walk_cam_4_sub.mp4', writer=writer, progress_callback=lambda i, n: pbar.update(1))"
+    "ani.save(\n",
+    "    \"walk_cam_4_sub.mp4\", writer=writer, progress_callback=lambda i, n: pbar.update(1)\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
