--- a/notebooks/demo/load_human36m.ipynb
+++ b/notebooks/demo/load_human36m.ipynb
@@ -42,28 +42,28 @@
     "path = \"/Users/paulpierzchlewicz/PycharmProjects/propose/data/human36m/Directions.60457274.cdf\"\n",
     "poses = load_poses(path)\n",
     "\n",
-    "poses /= poses.std() # Normalize poses\n",
+    "poses /= poses.std()  # Normalize poses\n",
     "\n",
     "poses = Human36mPose(poses)\n",
     "\n",
     "pose = poses[200]\n",
     "\n",
-    "plt.style.use('default')\n",
+    "plt.style.use(\"default\")\n",
     "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "ax.view_init(elev=15., azim=120)\n",
-    "poses[395].plot(ax=ax, alpha=.1)\n",
-    "poses[396].plot(ax=ax, alpha=.2)\n",
-    "poses[397].plot(ax=ax, alpha=.3)\n",
-    "poses[398].plot(ax=ax, alpha=.4)\n",
-    "poses[399].plot(ax=ax, alpha=.5)\n",
+    "ax = fig.add_subplot(111, projection=\"3d\")\n",
+    "ax.view_init(elev=15.0, azim=120)\n",
+    "poses[395].plot(ax=ax, alpha=0.1)\n",
+    "poses[396].plot(ax=ax, alpha=0.2)\n",
+    "poses[397].plot(ax=ax, alpha=0.3)\n",
+    "poses[398].plot(ax=ax, alpha=0.4)\n",
+    "poses[399].plot(ax=ax, alpha=0.5)\n",
     "poses[400].plot(ax=ax, alpha=1)\n",
     "\n",
     "ax.set_xlim(2, -2)\n",
     "ax.set_ylim(2, -2)\n",
     "ax.set_zlim(-2, 2)\n",
     "\n",
-    "ax.xaxis.pane.fill = False # Left pane\n",
+    "ax.xaxis.pane.fill = False  # Left pane\n",
     "ax.yaxis.pane.fill = False\n",
     "ax.zaxis.pane.fill = False\n",
     "ax.grid(False)\n",
@@ -88,7 +88,7 @@
     "ax.set_yticks([])\n",
     "ax.set_zticks([])\n",
     "\n",
-    "plt.savefig('./human36m_pose.png', dpi=300)\n",
+    "plt.savefig(\"./human36m_pose.png\", dpi=300)\n",
     "\n",
     "plt.show()"
    ],
