--- a/notebooks/demo/load_rat7m_dataset_demo.ipynb
+++ b/notebooks/demo/load_rat7m_dataset_demo.ipynb
@@ -46,8 +46,8 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "dirname = '/Users/paulpierzchlewicz/PycharmProjects/propose/data/rat7m' # Choose this such that it points to your dataset\n",
-    "data_key = 's4-d1'"
+    "dirname = \"/Users/paulpierzchlewicz/PycharmProjects/propose/data/rat7m\"  # Choose this such that it points to your dataset\n",
+    "data_key = \"s4-d1\""
    ],
    "metadata": {
     "collapsed": false,
@@ -61,17 +61,21 @@
    "execution_count": 18,
    "outputs": [],
    "source": [
-    "dataset = Rat7mDataset(dirname=dirname, data_key=data_key, transforms=[\n",
-    "    tr.SwitchArmsElbows(),\n",
-    "    tr.CropImageToPose(),\n",
-    "    tr.RotatePoseToCamera(),\n",
-    "    tr.CenterPose(),\n",
-    "    tr.ScalePose(scale=0.03),\n",
-    "    ScaleInputs(scale=0.1, multichannel=True, anti_aliasing=True),\n",
-    "    tr.NormaliseImageScale(),\n",
-    "    tr.ToGraph(),\n",
-    "    ToTensor()\n",
-    "])"
+    "dataset = Rat7mDataset(\n",
+    "    dirname=dirname,\n",
+    "    data_key=data_key,\n",
+    "    transforms=[\n",
+    "        tr.SwitchArmsElbows(),\n",
+    "        tr.CropImageToPose(),\n",
+    "        tr.RotatePoseToCamera(),\n",
+    "        tr.CenterPose(),\n",
+    "        tr.ScalePose(scale=0.03),\n",
+    "        ScaleInputs(scale=0.1, multichannel=True, anti_aliasing=True),\n",
+    "        tr.NormaliseImageScale(),\n",
+    "        tr.ToGraph(),\n",
+    "        ToTensor(),\n",
+    "    ],\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
@@ -103,25 +107,25 @@
     "pose = Rat7mPose(pose_matrix.numpy())\n",
     "image = res.image\n",
     "\n",
-    "plt.style.use('default')\n",
+    "plt.style.use(\"default\")\n",
     "fig = plt.figure(figsize=(20, 10))\n",
     "ax1 = fig.add_subplot(1, 2, 1)\n",
     "\n",
     "ax1.imshow(image)\n",
     "\n",
-    "ax2 = fig.add_subplot(1, 2, 2, projection='3d')\n",
+    "ax2 = fig.add_subplot(1, 2, 2, projection=\"3d\")\n",
     "ax2.get_proj = lambda: np.dot(Axes3D.get_proj(ax2), np.diag([1, 1, 0.75, 1]))\n",
-    "ax2.view_init(45,  90)\n",
+    "ax2.view_init(45, 90)\n",
     "ax2.set_xlim(3, -3)\n",
     "ax2.set_ylim(3, -3)\n",
     "ax2.set_zlim(-1, 1)\n",
-    "ax2.set_xlabel('x')\n",
-    "ax2.set_ylabel('y')\n",
-    "ax2.set_zlabel('z')\n",
+    "ax2.set_xlabel(\"x\")\n",
+    "ax2.set_ylabel(\"y\")\n",
+    "ax2.set_zlabel(\"z\")\n",
     "ax2.set_zticks([])\n",
     "\n",
     "pose.plot(ax=ax2)\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
