--- a/notebooks/demo/static_loader_demo.ipynb
+++ b/notebooks/demo/static_loader_demo.ipynb
@@ -28,7 +28,7 @@
    "execution_count": 18,
    "outputs": [],
    "source": [
-    "dirname = '/Users/paulpierzchlewicz/PycharmProjects/propose/data/rat7m/s4-d1' # Choose this such that it points to your dataset"
+    "dirname = \"/Users/paulpierzchlewicz/PycharmProjects/propose/data/rat7m/s4-d1\"  # Choose this such that it points to your dataset"
    ],
    "metadata": {
     "collapsed": false,
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "for i in dataloaders['train']:\n",
+    "for i in dataloaders[\"train\"]:\n",
     "    print(i.pose_matrix.shape)\n",
     "    print(i.adjacency_matrix.shape)\n",
     "    print(i.image.shape)\n",
