--- a/notebooks/preprocess_rat7m.ipynb
+++ b/notebooks/preprocess_rat7m.ipynb
@@ -34,9 +34,9 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "dirname = '/Users/paulpierzchlewicz/PycharmProjects/propose/data/rat7m' # Choose this such that it points to your dataset\n",
-    "data_key = 's4-d1'\n",
-    "mocap_path = f'{dirname}/mocap/mocap-{data_key}.mat'"
+    "dirname = \"/Users/paulpierzchlewicz/PycharmProjects/propose/data/rat7m\"  # Choose this such that it points to your dataset\n",
+    "data_key = \"s4-d1\"\n",
+    "mocap_path = f\"{dirname}/mocap/mocap-{data_key}.mat\""
    ],
    "metadata": {
     "collapsed": false,
@@ -159,10 +159,10 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "pose_dir = Path(f'{dirname}/{data_key}/poses')\n",
+    "pose_dir = Path(f\"{dirname}/{data_key}/poses\")\n",
     "pose_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "pose_path = pose_dir / f'{data_key}.npy'\n",
+    "pose_path = pose_dir / f\"{data_key}.npy\"\n",
     "\n",
     "mocap.save(pose_path)"
    ],
@@ -179,13 +179,14 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "camera_dir = Path(f'{dirname}/{data_key}/cameras')\n",
+    "\n",
+    "camera_dir = Path(f\"{dirname}/{data_key}/cameras\")\n",
     "camera_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "camera_path = camera_dir / f'{data_key}.pickle'\n",
+    "camera_path = camera_dir / f\"{data_key}.pickle\"\n",
     "\n",
-    "with open(camera_path, 'wb') as f:\n",
-    "    pickle.dump(cameras, f)\n"
+    "with open(camera_path, \"wb\") as f:\n",
+    "    pickle.dump(cameras, f)"
    ],
    "metadata": {
     "collapsed": false,
@@ -209,7 +210,8 @@
    ],
    "source": [
     "from pathlib import PurePath\n",
-    "PurePath('/Users/paulpierzchlewicz/PycharmProjects/propose/data/rat7m').name"
+    "\n",
+    "PurePath(\"/Users/paulpierzchlewicz/PycharmProjects/propose/data/rat7m\").name"
    ],
    "metadata": {
     "collapsed": false,
